Doing bit of a refactor

--- a/notebooks/DatasetInspection.ipynb
+++ b/notebooks/DatasetInspection.ipynb
@@ -39,9 +39,13 @@
     "from util.paths import DATA_PATH\n",
     "from util.datasets import SlidingWindowDataset, read_physionet_dataset, RespiratoryEventType\n",
     "from util.filter import apply_butterworth_bandpass_filter, apply_butterworth_lowpass_filter\n",
-    "from util.mathutil import get_peaks, PeakType, cluster_1d, Cluster\n",
-    "from util.rule_based_apnea_detector import detect_respiratory_events, _detect_airflow_resp_events\n",
+    "from util.mathutil import get_peaks, PeakType, cluster_1d, IntRange\n",
+    "from rule_based import detect_respiratory_events\n",
+    "from rule_based.detector import _detect_airflow_resp_events\n",
     "from util.event_based_metrics import EventBasedConfusionMatrix, get_overlaps\n",
+    "\n",
+    "# Makes numpy raise errors instead of outputting warnings\n",
+    "np.seterr('raise')\n",
     "\n",
     "# Some preparations to pretty-print tensors & ndarrays\n",
     "np.set_printoptions(edgeitems=10)\n",
@@ -58,7 +62,7 @@
    },
    "outputs": [],
    "source": [
-    "dataset_folder = DATA_PATH / \"training\" / \"tr03-0289\"\n",
+    "dataset_folder = DATA_PATH / \"training\" / \"tr03-0005\"\n",
     "config = SlidingWindowDataset.Config(\n",
     "    physionet_dataset_folder=dataset_folder,\n",
     "    downsample_frequency_hz=5,\n",
@@ -155,7 +159,7 @@
    },
    "outputs": [],
    "source": [
-    "event_num = 2\n",
+    "event_num = 0\n",
     "signal_name = \"AIRFLOW\"\n",
     "event = annotated_respiratory_events[event_num]\n",
     "\n",
@@ -286,7 +290,7 @@
     "detected_respiratory_events = \\\n",
     "    detect_respiratory_events(sliding_window_dataset.signals,\n",
     "                              sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz,\n",
-    "                              ignore_wake_stages=False)\n",
+    "                              discard_wake_stages=False)\n",
     "detected_hypopnea_events = [d_ for d_ in detected_respiratory_events if d_.event_type == RespiratoryEventType.Hypopnea]\n",
     "# detected_apnea_events = [d_ for d_ in detected_apnea_events if d_.apnea_type != ApneaType.Hypopnea]\n",
     "\n",
@@ -330,21 +334,17 @@
     "\n",
     "print(f\"Number of annotated events: {len(annotated_respiratory_events)}\")\n",
     "print(f\"Number of detected events: {len(detected_respiratory_events)}\")\n",
-    "print(f\"Number of OVERLAPPING events: {len(overlapping_events)}\")\n",
     "print()\n",
-    "print(\"Scores:\")\n",
+    "print(f\"Number of OVERLAPPING events: {len(overlapping_events)}\")\n",
     "print(f\"- Coverage of annotated respiratory events {len(overlapping_events)/len(annotated_respiratory_events)*100:.1f}%\")\n",
     "print(f\"- Detected events that also appear in annotations: {len(overlapping_events)/len(detected_respiratory_events)*100:.1f}%\")\n",
     "print()\n",
-    "\n",
-    "np.seterr('raise')\n",
     "\n",
     "confusion_matrix = EventBasedConfusionMatrix(annotated_events=annotated_respiratory_events, detected_events=detected_respiratory_events)\n",
     "macro_scores = confusion_matrix.get_macro_scores()\n",
     "print(\"Confusion-matrix based macro scores:\")\n",
     "print(f\" -> {macro_scores}\")\n",
     "\n",
-    "plt.figure(figsize=(7, 7), dpi=80)\n",
     "confusion_matrix.plot(title=None)\n"
    ]
   },
@@ -358,7 +358,7 @@
    },
    "outputs": [],
    "source": [
-    "event_num = 0\n",
+    "event_num = 39\n",
     "event = annotated_respiratory_events[event_num]\n",
     "# event = detected_respiratory_events[event_num]\n",
     "# event = detected_but_not_annotated[event_num]\n",
