--- a/notebooks/Detection_MultipleDatasets.ipynb
+++ b/notebooks/Detection_MultipleDatasets.ipynb
@@ -43,8 +43,9 @@
     "from util.paths import DATA_PATH\n",
     "from util.datasets import SlidingWindowDataset, read_physionet_dataset, RespiratoryEventType\n",
     "from util.filter import apply_butterworth_bandpass_filter, apply_butterworth_lowpass_filter\n",
-    "from util.mathutil import get_peaks, PeakType, cluster_1d, Cluster\n",
-    "from util.rule_based_apnea_detector import detect_respiratory_events, _detect_airflow_resp_events\n",
+    "from util.mathutil import get_peaks, PeakType, cluster_1d, IntRange\n",
+    "from rule_based import detect_respiratory_events\n",
+    "from rule_based.detector import _detect_airflow_resp_events\n",
     "from util.event_based_metrics import EventBasedConfusionMatrix, get_overlaps, get_n_detected_annotations\n",
     "\n",
     "# Makes numpy raise errors instead of outputting warnings\n",
@@ -81,7 +82,7 @@
     "        time_window_size=pd.Timedelta(\"5 minutes\")\n",
     "    )\n",
     "    sliding_window_dataset = SlidingWindowDataset(config=config, allow_caching=True)\n",
-    "    detected_respiratory_events = detect_respiratory_events(sliding_window_dataset.signals, sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz, ignore_wake_stages=False)\n",
+    "    detected_respiratory_events = detect_respiratory_events(sliding_window_dataset.signals, sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz, discard_wake_stages=False)\n",
     "\n",
     "    n_annotated_events += len(sliding_window_dataset.respiratory_events)\n",
     "    n_detected_events += len(detected_respiratory_events)\n",
@@ -113,6 +114,7 @@
     "print(\"Confusion-matrix based macro scores:\")\n",
     "print(f\" -> {macro_scores}\")\n",
     "\n",
+    "plt.figure(figsize=(7, 7))\n",
     "confusion_matrix.plot()\n"
    ]
   }
