A few logical & performance improvements for the datasets

--- a/notebooks/DatasetInspection.ipynb
+++ b/notebooks/DatasetInspection.ipynb
@@ -64,13 +64,10 @@
    "source": [
     "dataset_folder = DATA_PATH / \"training\" / \"tr03-0005\"\n",
     "config = SlidingWindowDataset.Config(\n",
-    "    dataset_folder=dataset_folder,\n",
     "    downsample_frequency_hz=5,\n",
     "    time_window_size=pd.Timedelta(\"5 minutes\"),\n",
-    "    time_window_stride=1,\n",
-    "    ground_truth_vector_width=1\n",
     ")\n",
-    "sliding_window_dataset = SlidingWindowDataset(config=config, allow_caching=True)\n",
+    "sliding_window_dataset = SlidingWindowDataset(config=config, dataset_folder=dataset_folder, allow_caching=True)\n",
     "\n",
     "print(f\"#Physionet dataset samples: {len(sliding_window_dataset.signals)}\")\n",
     "print(f\"#Sliding window positions: {len(sliding_window_dataset)}\")\n",
@@ -107,6 +104,11 @@
     "print()\n",
     "print(f\"{len(annotated_respiratory_events)} annotated respiratory events:\")\n",
     "print(\" - \" + \"\\n - \".join([f\"#{i}: {evt}\" for i, evt in enumerate(annotated_respiratory_events)]))\n",
+    "\n",
+    "# Enrich whole sliding window dataset by \"is awake\" row\n",
+    "awake_series = sliding_window_dataset.awake_series\n",
+    "sliding_window_dataset.signals[awake_series.name] = awake_series\n",
+    "del awake_series\n",
     "\n",
     "# Enrich whole sliding window dataset by an events outline\n",
     "annotated_events_outline_mat = np.zeros(shape=(len(sliding_window_dataset.signals),))\n",
