--- a/notebooks/RuleBasedDetection.ipynb
+++ b/notebooks/RuleBasedDetection.ipynb
@@ -76,11 +76,10 @@
    "source": [
     "dataset_folder = DATA_PATH / \"training\" / \"tr03-0005\"\n",
     "config = SlidingWindowDataset.Config(\n",
-    "    dataset_folder=dataset_folder,\n",
     "    downsample_frequency_hz=5,\n",
-    "    time_window_size=pd.Timedelta(\"5 minutes\"),\n",
+    "    time_window_size=pd.Timedelta(\"5 minutes\")\n",
     ")\n",
-    "sliding_window_dataset = SlidingWindowDataset(config=config, allow_caching=True)\n",
+    "sliding_window_dataset = SlidingWindowDataset(config=config, dataset_folder=dataset_folder, allow_caching=True)\n",
     "\n",
     "print(f\"#Physionet dataset samples: {len(sliding_window_dataset.signals)}\")\n",
     "print(f\"#Sliding window positions: {len(sliding_window_dataset)}\")\n",
@@ -117,6 +116,11 @@
     "print()\n",
     "print(f\"{len(annotated_respiratory_events)} annotated respiratory events:\")\n",
     "print(\" - \" + \"\\n - \".join([f\"#{i}: {evt}\" for i, evt in enumerate(annotated_respiratory_events)]))\n",
+    "\n",
+    "# Enrich whole sliding window dataset by \"is awake\" row\n",
+    "awake_series = sliding_window_dataset.awake_series\n",
+    "sliding_window_dataset.signals[awake_series.name] = awake_series\n",
+    "del awake_series\n",
     "\n",
     "# Enrich whole sliding window dataset by an events outline\n",
     "annotated_events_outline_mat = np.zeros(shape=(len(sliding_window_dataset.signals),))\n",
@@ -164,7 +168,7 @@
    },
    "outputs": [],
    "source": [
-    "detected_respiratory_events = detect_respiratory_events(sliding_window_dataset.signals, sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz, discard_wake_stages=False)\n",
+    "detected_respiratory_events = detect_respiratory_events(sliding_window_dataset.signals, sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz, is_awake=None)\n",
     "detected_hypopnea_events_ = [d_ for d_ in detected_respiratory_events if d_.event_type == RespiratoryEventType.Hypopnea]\n",
     "detected_apnea_events_ = [d_ for d_ in detected_respiratory_events if d_.event_type != RespiratoryEventType.Hypopnea]\n",
     "\n",
@@ -304,6 +308,10 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "config = SlidingWindowDataset.Config(\n",
+    "    downsample_frequency_hz=5,\n",
+    "    time_window_size=pd.Timedelta(\"5 minutes\")\n",
+    ")\n",
     "dataset_names = (\"tr03-0005\", \"tr03-0289\", \"tr03-0921\", \"tr04-1078\", \"tr07-0168\")\n",
     "\n",
     "confusion_matrix = EventBasedConfusionMatrix.empty()\n",
@@ -312,14 +320,9 @@
     "n_detected_annotations: int = 0\n",
     "for dataset_name in tqdm(dataset_names, desc=f\"Processing {len(dataset_names)} datasets\"):\n",
     "    dataset_folder = DATA_PATH / \"training\" / dataset_name\n",
-    "    config = SlidingWindowDataset.Config(\n",
-    "        dataset_folder=dataset_folder,\n",
-    "        downsample_frequency_hz=5,\n",
-    "        time_window_size=pd.Timedelta(\"5 minutes\")\n",
-    "    )\n",
-    "    sliding_window_dataset = SlidingWindowDataset(config=config, allow_caching=True)\n",
+    "    sliding_window_dataset = SlidingWindowDataset(config=config, dataset_folder=dataset_folder, allow_caching=True)\n",
     "\n",
-    "    detected_respiratory_events = detect_respiratory_events(sliding_window_dataset.signals, sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz, discard_wake_stages=False)\n",
+    "    detected_respiratory_events = detect_respiratory_events(sliding_window_dataset.signals, sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz, is_awake=None)\n",
     "    n_detected_events += len(detected_respiratory_events)\n",
     "    n_annotated_events += len(sliding_window_dataset.respiratory_events)\n",
     "\n",
