Implement Evaluator anew, with cleaner and more performant structure

--- a/notebooks/RuleBasedDetection.ipynb
+++ b/notebooks/RuleBasedDetection.ipynb
@@ -168,7 +168,7 @@
    },
    "outputs": [],
    "source": [
-    "detected_respiratory_events = detect_respiratory_events(sliding_window_dataset.signals, sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz, is_awake=None)\n",
+    "detected_respiratory_events = detect_respiratory_events(sliding_window_dataset.signals, sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz, awake_series=None)\n",
     "detected_hypopnea_events_ = [d_ for d_ in detected_respiratory_events if d_.event_type == RespiratoryEventType.Hypopnea]\n",
     "detected_apnea_events_ = [d_ for d_ in detected_respiratory_events if d_.event_type != RespiratoryEventType.Hypopnea]\n",
     "\n",
@@ -257,7 +257,7 @@
    },
    "outputs": [],
    "source": [
-    "event_num = 39\n",
+    "event_num = 29\n",
     "event = annotated_respiratory_events[event_num]\n",
     "# event = detected_respiratory_events[event_num]\n",
     "# event = detected_but_not_annotated[event_num]\n",
@@ -322,7 +322,7 @@
     "    dataset_folder = DATA_PATH / \"training\" / dataset_name\n",
     "    sliding_window_dataset = SlidingWindowDataset(config=config, dataset_folder=dataset_folder, allow_caching=True)\n",
     "\n",
-    "    detected_respiratory_events = detect_respiratory_events(sliding_window_dataset.signals, sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz, is_awake=None)\n",
+    "    detected_respiratory_events = detect_respiratory_events(sliding_window_dataset.signals, sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz, awake_series=None)\n",
     "    n_detected_events += len(detected_respiratory_events)\n",
     "    n_annotated_events += len(sliding_window_dataset.respiratory_events)\n",
     "\n",
@@ -370,7 +370,7 @@
     "print(f\" -> {macro_scores}\")\n",
     "\n",
     "plt.figure(figsize=(7, 7))\n",
-    "confusion_matrix.plot(title=\"Confusion matrix for classification confidence over multiple datasets\")\n",
+    "confusion_matrix.plot(title=f\"Confusion matrix for classification confidence over {len(dataset_names)} datasets\")\n",
     "\n"
    ],
    "metadata": {
