A few minor modifications of inference behavior & tidied-up rule-based detection notebook & implemented rule-based detection on multiple cores

--- a/notebooks/RuleBasedDetection.ipynb
+++ b/notebooks/RuleBasedDetection.ipynb
@@ -25,8 +25,10 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "from typing import Dict, Tuple\n",
+    "from typing import Dict, Tuple, List\n",
     "from collections import Counter\n",
+    "import functools\n",
+    "from pathlib import Path\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.dates import date2num\n",
@@ -36,12 +38,12 @@
     "import scipy.signal\n",
     "import scipy.fftpack\n",
     "\n",
-    "from util.paths import DATA_PATH\n",
-    "from util.datasets import SlidingWindowDataset, read_physionet_dataset, RespiratoryEventType\n",
+    "from util.train_test_split import read_train_test_split_yaml\n",
+    "from util.paths import DATA_PATH, TRAIN_TEST_SPLIT_YAML\n",
+    "from util.datasets import SlidingWindowDataset, read_physionet_dataset, RespiratoryEventType, RespiratoryEvent\n",
     "from util.filter import apply_butterworth_bandpass_filter, apply_butterworth_lowpass_filter\n",
     "from util.mathutil import get_peaks, PeakType, cluster_1d, IntRange\n",
-    "from rule_based import detect_respiratory_events\n",
-    "from rule_based.detector import _detect_airflow_resp_events\n",
+    "from rule_based import detect_respiratory_events, detect_respiratory_events_multicore\n",
     "from util.event_based_metrics import EventBasedConfusionMatrix, get_overlaps, get_n_detected_annotations\n",
     "\n",
     "# Makes numpy raise errors instead of outputting warnings\n",
@@ -293,8 +295,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Run detector on a number of datasets. Also, directly print out a few statistics on overlaps of annotated & detected\n",
-    "respiratory events, which results in the __annotation recall__ score."
+    "Run multicore detector on a number of datasets."
    ],
    "metadata": {
     "collapsed": false,
@@ -308,33 +309,95 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# Use training dataset folders as per train-test-split\n",
+    "data_folder = DATA_PATH / \"training\"\n",
+    "train_test_folders = read_train_test_split_yaml(input_yaml=TRAIN_TEST_SPLIT_YAML, prefix_base_folder=data_folder)\n",
+    "dataset_folders = train_test_folders.train\n",
+    "del train_test_folders\n",
+    "\n",
+    "# Use a given, small set of dataset folders\n",
+    "dataset_names = (\"tr03-0005\", \"tr03-0289\", \"tr03-0921\", \"tr04-1078\", \"tr07-0168\")\n",
+    "dataset_folders = [DATA_PATH / \"training\" / name for name in dataset_names]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "config = SlidingWindowDataset.Config(\n",
     "    downsample_frequency_hz=5,\n",
-    "    time_window_size=pd.Timedelta(\"5 minutes\")\n",
-    ")\n",
-    "dataset_names = (\"tr03-0005\", \"tr03-0289\", \"tr03-0921\", \"tr04-1078\", \"tr07-0168\")\n",
     "\n",
-    "confusion_matrix = EventBasedConfusionMatrix.empty()\n",
+    "    # The following fields have no effect on rule-based detection, though need to be provided and -indeed- have an effect on cache-misses\n",
+    "    time_window_size=pd.Timedelta(\"5 minutes\"),\n",
+    "    time_window_stride=5,\n",
+    "    ground_truth_vector_width=11\n",
+    ")\n",
+    "\n",
+    "# Let's first load our datasets & prepare the data. That -if no cache available- might take a while\n",
+    "sliding_window_datasets: List[SlidingWindowDataset] = []\n",
+    "signals: List[pd.DataFrame] = []\n",
+    "awake_series: List[pd.Series] = []\n",
+    "for dataset_folder in tqdm(dataset_folders, desc=\"Load & pre-process datasets\"):\n",
+    "    sliding_window_dataset = SlidingWindowDataset(config=config, dataset_folder=dataset_folder, allow_caching=True)\n",
+    "    sliding_window_datasets += [sliding_window_dataset]\n",
+    "    signals += [sliding_window_dataset.signals]\n",
+    "    awake_series += [sliding_window_dataset.awake_series]\n",
+    "\n",
+    "# Do the multicore detection work\n",
+    "progress_fn_ = functools.partial(tqdm, total=len(sliding_window_datasets), desc=\"Detecting respiratory events\")\n",
+    "detected_event_lists: List[List[RespiratoryEvent]] = detect_respiratory_events_multicore(\n",
+    "    signals=signals,\n",
+    "    sample_frequency_hz=config.downsample_frequency_hz,\n",
+    "    awake_series=None,  # Insert 'awake_series' from above, such that respiratory events during wake times are neglected\n",
+    "    progress_fn=progress_fn_\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Run a few metrics on the freshly-detected respiratory events. Also, directly print out a few statistics on overlaps\n",
+    "of annotated & detected respiratory events, which results in the __annotation recall__ score."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Run metrics on our detections\n",
+    "overall_confusion_matrix = EventBasedConfusionMatrix.empty()\n",
     "n_annotated_events: int = 0\n",
     "n_detected_events: int = 0\n",
     "n_detected_annotations: int = 0\n",
-    "for dataset_name in tqdm(dataset_names, desc=f\"Processing {len(dataset_names)} datasets\"):\n",
-    "    dataset_folder = DATA_PATH / \"training\" / dataset_name\n",
-    "    sliding_window_dataset = SlidingWindowDataset(config=config, dataset_folder=dataset_folder, allow_caching=True)\n",
-    "\n",
-    "    detected_respiratory_events = detect_respiratory_events(sliding_window_dataset.signals, sample_frequency_hz=sliding_window_dataset.config.downsample_frequency_hz, awake_series=None)\n",
-    "    n_detected_events += len(detected_respiratory_events)\n",
+    "for sliding_window_dataset, detected_events in zip(sliding_window_datasets, detected_event_lists):\n",
+    "    n_detected_events += len(detected_events)\n",
     "    n_annotated_events += len(sliding_window_dataset.respiratory_events)\n",
     "\n",
-    "    cm_ = EventBasedConfusionMatrix(annotated_events=sliding_window_dataset.respiratory_events, detected_events=detected_respiratory_events)\n",
-    "    confusion_matrix += cm_\n",
-    "    o_ = get_n_detected_annotations(annotated_events=sliding_window_dataset.respiratory_events, detected_events=detected_respiratory_events)\n",
+    "    cm_ = EventBasedConfusionMatrix(annotated_events=sliding_window_dataset.respiratory_events, detected_events=detected_events)\n",
+    "    overall_confusion_matrix += cm_\n",
+    "    o_ = get_n_detected_annotations(annotated_events=sliding_window_dataset.respiratory_events, detected_events=detected_events)\n",
     "    n_detected_annotations += o_\n",
     "\n",
-    "    print(f\"Finished {dataset_name}\")\n",
-    "    print()\n",
-    "\n",
-    "print()\n",
     "print(f\"Number of annotated respiratory events: {n_annotated_events}\")\n",
     "print(f\"Number of detected respiratory events: {n_detected_events}\")\n",
     "print()\n",
@@ -365,12 +428,12 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "macro_scores = confusion_matrix.get_macro_scores()\n",
+    "macro_scores = overall_confusion_matrix.get_macro_scores()\n",
     "print(\"Confusion-matrix based macro scores:\")\n",
     "print(f\" -> {macro_scores}\")\n",
     "\n",
     "plt.figure(figsize=(7, 7))\n",
-    "confusion_matrix.plot(title=f\"Confusion matrix for classification confidence over {len(dataset_names)} datasets\")\n",
+    "overall_confusion_matrix.plot(title=f\"Confusion matrix for classification confidence over {len(dataset_folders)} datasets\")\n",
     "\n"
    ],
    "metadata": {
