Extended EventBasedMetrics by a PreciseConfusionMatrix

--- a/notebooks/AiBasedDetection.ipynb
+++ b/notebooks/AiBasedDetection.ipynb
@@ -51,7 +51,7 @@
     "    RESPIRATORY_EVENT_TYPE__GROUND_TRUTH_CLASS, SlidingWindowDataset\n",
     "from util.mathutil import cluster_1d, IntRange\n",
     "from ai_based.utilities.inference import retrieve_respiratory_events\n",
-    "from util.event_based_metrics import get_overlaps, get_n_detected_annotations, EventBasedConfusionMatrix\n",
+    "from util.event_based_metrics import get_overlaps, get_n_detected_annotations, OverlapsBasedConfusionMatrix\n",
     "\n",
     "# Some preparations to pretty-print tensors & ndarrays\n",
     "np.set_printoptions(edgeitems=10)\n",
@@ -79,7 +79,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "EXPERIMENT_DIR = RESULTS_PATH_AI / \"cnn-3-gt_point-bs128\"\n",
+    "EXPERIMENT_DIR = RESULTS_PATH_AI / \"cnn-5-gt_point-bs128-peakified_signals-low_wd-train_noise\"\n",
     "COMBINATION_DIR = EXPERIMENT_DIR / \"combination_0\"\n",
     "REPETITION_DIR = COMBINATION_DIR / \"repetition_0\"\n",
     "\n",
@@ -350,7 +350,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "events_dict = retrieve_respiratory_events(model=model, ai_dataset=ai_dataset, batch_size=batch_size, progress_fn=tqdm)\n",
+    "events_dict = retrieve_respiratory_events(model=model, ai_dataset=ai_dataset, batch_size=batch_size, progress_fn=tqdm, min_cluster_length_s=7)\n",
     "detected_respiratory_events = events_dict[sliding_window_dataset.dataset_name]\n",
     "\n",
     "detected_hypopnea_events_ = [d_ for d_ in detected_respiratory_events if d_.event_type == RespiratoryEventType.Hypopnea]\n",
@@ -409,7 +409,7 @@
     "print()\n",
     "\n",
     "# Obtain confusion-matrix based metrics\n",
-    "confusion_matrix = EventBasedConfusionMatrix(annotated_events=annotated_respiratory_events, detected_events=detected_respiratory_events)\n",
+    "confusion_matrix = OverlapsBasedConfusionMatrix(annotated_events=annotated_respiratory_events, detected_events=detected_respiratory_events)\n",
     "macro_scores = confusion_matrix.get_macro_scores()\n",
     "print(\"Confusion-matrix based macro scores:\")\n",
     "print(f\" -> {macro_scores}\")\n",
@@ -437,7 +437,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "event_num = 1\n",
+    "event_num = 11\n",
     "# event = annotated_respiratory_events[event_num]\n",
     "event = detected_respiratory_events[event_num]\n",
     "# event = detected_but_not_annotated[event_num]\n",
@@ -495,7 +495,7 @@
    "outputs": [],
    "source": [
     "# Use training dataset folders as per train-test-split\n",
-    "data_folder = DATA_PATH / \"Physionet_preprocessed\"\n",
+    "data_folder = DATA_PATH / \"training\"\n",
     "train_test_folders = read_train_test_split_yaml(input_yaml=TRAIN_TEST_SPLIT_YAML, prefix_base_folder=data_folder)\n",
     "dataset_folders = train_test_folders.train\n",
     "del train_test_folders\n",
@@ -526,7 +526,7 @@
     "    \"At least one of the sub-datasets has no annotations.\"\n",
     "\n",
     "# Perform the detection run\n",
-    "progress_fn = functools.partial(tqdm, desc=\"Predicting\")\n",
+    "progress_fn = functools.partial(tqdm, desc=\"Detecting\")\n",
     "detected_events_dict = retrieve_respiratory_events(model=model, ai_dataset=ai_dataset, batch_size=batch_size, progress_fn=progress_fn)\n",
     "\n",
     "# Reload our SlidingWindowDatasets for later plotting purposes. That's necessary, because their signals were modified by AiDataset\n",
@@ -596,7 +596,7 @@
    "outputs": [],
    "source": [
     "# Run metrics on our detections\n",
-    "overall_confusion_matrix = EventBasedConfusionMatrix.empty()\n",
+    "overall_confusion_matrix = OverlapsBasedConfusionMatrix.empty()\n",
     "n_annotated_events: int = 0\n",
     "n_detected_events: int = 0\n",
     "n_detected_annotations: int = 0\n",
@@ -605,7 +605,7 @@
     "    n_detected_events += len(detected_events)\n",
     "    n_annotated_events += len(sliding_window_dataset.respiratory_events)\n",
     "\n",
-    "    cm_ = EventBasedConfusionMatrix(annotated_events=sliding_window_dataset.respiratory_events, detected_events=detected_events)\n",
+    "    cm_ = OverlapsBasedConfusionMatrix(annotated_events=sliding_window_dataset.respiratory_events, detected_events=detected_events)\n",
     "    overall_confusion_matrix += cm_\n",
     "    o_ = get_n_detected_annotations(annotated_events=sliding_window_dataset.respiratory_events, detected_events=detected_events)\n",
     "    n_detected_annotations += o_\n",
